fix bug if name too long in Authorcard

--- a/src/TrueOrFalse.Frontend.Web/Style/sidebar.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/sidebar.less
@@ -28,6 +28,7 @@
 
     .column-right {
         margin: 0 1.33em 1.75em 0;
+        max-width: 131px;
 
         .card-link {
             margin: 0 0 0.3125em 0;
